# EmployeeManagementSystem

./: .gitignore  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt
app/client/: main.cpp
app/src/: Employee.cpp  EmployeeDatabase.cpp  EmployeeMissingInDatabase.h  EntryGenerator.cpp  EntryGenerator.h  ID_Pool.cpp  ID_Pool.h  NoIDs_InID_Pool.h
src/client/: main.cpp
src/project/: Employee.h  EmployeeDAO.cpp  EmployeeDAO.h  EmployeeDatabase.cpp  EmployeeDatabase.h  EmployeePrinter.cpp  EmployeePrinter.h  EntryGenerator.h  ID.cpp  ID.h  ID_Pool.cpp  TerminalScreen.cpp  TerminalScreen.h
tests/: CMakeLists.txt
tests/src/: SomeUnitTest.cpp
tests/testCases/: EmployeeManagementSystemTests.cpp
